# mapex

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs
tests/fixtures/: complex.exs  complex.json  complex_pretty.exs  nested.exs  nested.json  nested_pretty.exs  simple.exs  simple_pretty.exs
