[package]
name = "mapex"
version = "0.1.0"
edition = "2021"

[dependencies]
# json parsing and serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# for parsing CLI args
clap = { version = "4.5", features = ["derive"]}
pretty = "0.12.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
